istio-1.4.2/simple-flask-app/kubernetes/simple-flask-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
  namespace: istio-app
  labels:
    app: flaskapp
spec:
  selector:
    app: flaskapp
  ports:
    - name: http
      port: 7777

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flaskapp-v1
  namespace: istio-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flaskapp
        version: v1
    spec:
      containers:
      - name: flaskapp
        image: simple-flask-app
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 7777

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flaskapp-v2
  namespace: istio-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flaskapp
        version: v2
    spec:
      containers:
      - name: flaskapp
        image: simple-flask-app
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 7777
